app/styles/components/_stations_list.scss
$gold: #ffa700;
$red: #ff5100;
$green: green;
$blue: #30a7fa;

.stations-list {
	li {
		text-transform: capitalize;
	}
}
ul.station-filters {
  list-style-type: none;
}
#station-header {
  h3 {
		text-transform: capitalize;
  }
}
.flush-list ul {
  margin: 0;
  padding: 0;
}
.flush-list.upcoming-trains li {
  border-left: 4px solid white;
  &.gold {
    border-left-color: $gold;
  }
  &.red {
    border-left-color: $red;
  }
  &.green {
    border-left-color: $green;
  }
  &.blue {
    border-left-color: $blue;
  }
}
.geo-indicator {
  font-size: 0.8em;
}
.flush-list li {
  &.section-title {
    border: none;
    margin-top: 1em;
    background: linear-gradient(color-stops(white, #f6f6f6));
    &.flush-top {
      margin-top: 0;
    }
    h2 {
      margin-bottom: 1px;
      padding: 0.4em 0.83em 0.2em;
      background: linear-gradient(color-stops(#e6e6e6, #ddd));
      display: inline-block;
      margin-left: 0.83em;
      border-radius: 10px 10px 0 0;
      font-size: 1em;
      border-bottom: 1px solid #bbb;
    }
  }

  list-style-type: none;
  border-top: 1px solid #e6e6e6;
  &:nth-last-child(-n+1) {
    border-bottom: 1px solid #e6e6e6;
  }
  a {
    display: block;
    padding: 20px;
    text-decoration: none;
    min-height: 1em;
    overflow: hidden;
    color: #111;
    &:visited {
      color: #111;
    }
    > span.left {
      position: absolute;
      z-index: -1;
    }
    > span.right {
      white-space: nowrap;
      text-overflow: ellipsis;
      float: right;
      position: relative;
      z-index: 0;
      background: white;
      max-width: 80%;
      padding-left: 10px;
      top: -1px;
      overflow-x: hidden;
      span.next-arrival {
        display: inline-block;
        padding-top: 1px;
        padding-bottom: 2px;
        padding-left: 3px;
      }
    }
  }
  .next-arrival {

    &.gold {
      color: $gold;

      .dir {
        background-color: $gold;
      }
      .time, .dir {
        border-color: $gold;
      }
    }

    &.red {
      color: $red;

      .dir {
        background-color: $red;
      }
      .time, .dir {
        border-color: $red;
      }
    }

    &.green {
      color: $green;

      .dir {
        background-color: $green;
      }
      .time, .dir {
        border-color: $green;
      }
    }

    &.blue {
      color: $blue;

      .dir {
        background-color: $blue;
      }
      .time, .dir {
        border-color: $blue;
      }
    }

    .dir {
      display: inline-block;
      padding-top: 3px;

      color: white;
      background-color: gray;
      font-weight: bold;

      border-width: 1px;
      border-style: solid;
      border-radius: 1em 0 0 1em;
      padding-left: .5em;
      padding-right: .25em;
    }

    .time {
      display: inline-block;
      padding-top: 3px;

      background-color: transparent;

      border-width: 1px;
      border-style: solid;
      border-radius: 0 1em 1em 0;
      padding-left: .25em;
      padding-right: .5em;
    }
  }
}
.train-id {
  padding-left: 2em;
  color: #AAA;
}

